fixed col wrapping

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -46,11 +46,6 @@ body {
   display:         flex;
   flex-wrap: wrap;
 }
-.row > [class*='col-'] {
-  display: flex;
-  flex-direction: column;
-}
-
 .row::after {
   content: "";
   clear: both;
